# Booker

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  build.bat  build.ps1  build.sh
.github/workflows/: PR.yml  release.yml
cli/: CMakeLists.txt
cli/include/: Include.hpp  Utilities.hpp
cli/src/: Utilities.cpp  main.cpp
core/: CMakeLists.txt
core/include/booker/archive/: ArchiveUtils.hpp  RarException.hpp  RarReader.hpp  RarWriter.hpp  ZipException.hpp  ZipReader.hpp  ZipWriter.hpp
core/include/booker/document/: Document.hpp  Metadata.hpp  Page.hpp
core/include/booker/format/: CbrHandler.hpp  CbzHandler.hpp  IFormatHandler.hpp  PdfHandler.hpp
core/include/booker/io/: DirectoryUtils.hpp  TempDirectory.hpp
core/include/booker/utils/: Exception.hpp  ImageUtils.hpp  OS.hpp  StringUtils.hpp
core/src/booker/archive/: ArchiveUtils.cpp  RarException.cpp  RarReader.cpp  RarWriter.cpp  ZipException.cpp  ZipReader.cpp  ZipWriter.cpp
core/src/booker/document/: Document.cpp  Metadata.cpp  Page.cpp
core/src/booker/format/: CbrHandler.cpp  CbzHandler.cpp  PdfHandler.cpp
core/src/booker/io/: DirectoryUtils.cpp  TempDirectory.cpp
core/src/booker/utils/: Exception.cpp  ImageUtils.cpp  StringUtils.cpp
include/: Include.hpp
sample data/: Booker - Avignon.cbz
sample data/sources/: Booker - Avignon - sources.txt  Booker - Pont du Gard - sources.txt  Booker - Sample PDF.odt
src/: Exception.cpp  main.cpp
